--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -2,9 +2,8 @@ name: Golang CI
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ main ]
   pull_request:
-    branches: [ $default-branch ]
 
 jobs:
 
